--- a/infra/Pulumi.dev.yaml
+++ b/infra/Pulumi.dev.yaml
@@ -1,5 +1,4 @@
-encryptionsalt: v1:mNKRvdAXHS4=:v1:qViy0YqCPQzj+9vB:4hPMLRr3QNG+ZASiSzAaEyfXSx5+Mw==
+encryptionsalt: v1:JNtMMk2WkpU=:v1:PMoPqsmK7YxcNm1s:nugLzVQlmmg3yDJ0hUedpl7DD/GUEw==
 config:
-  aks-otel-demo:honeycombKey:
-    secure: v1:LfB25EqG1Abq4cna:GkN076hWiaBuKuUCwtKjxWARCCW69gNrqcIXcaRih+H63zAClEI=
+  aks-otel-demo:honeycombKey: Ru255IJbfspxl2Gmj63MTF
   azure-native:location: uksouth
