--- a/infra/aks-otel-demo.csproj
+++ b/infra/aks-otel-demo.csproj
@@ -7,9 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Core" Version="1.31.0" />
     <PackageReference Include="Pulumi" Version="3.*" />
     <PackageReference Include="Pulumi.AzureAD" Version="5.37.0" />
-    <PackageReference Include="Pulumi.AzureNative" Version="1.*" />
+    <PackageReference Include="Pulumi.AzureNative" Version="2.0.0-beta.4" />
     <PackageReference Include="Pulumi.Kubernetes" Version="3.25.0" />
     <PackageReference Include="Pulumi.Random" Version="4.13.0" />
     <PackageReference Include="Pulumi.Tls" Version="4.10.0" />
