--- a/infra/Pulumi.dev.yaml
+++ b/infra/Pulumi.dev.yaml
@@ -6,5 +6,9 @@ config:
     secure: v1:OEkHk0IGXSaZ7I8D:HUpbLTvBeICjlGDSPewZDD4GBkH68zfwDUDeOJIaPT5EwQ==
   aks-otel-demo:dns-zone-resource-group:
     secure: v1:rOdZiH4jnTtXmXLX:7ncjL1KhR+YbJRMaS+n87hHFKucoDW7ttQ==
+  aks-otel-demo:dnsZoneName:
+    secure: v1:GlmfNNDtgRZ2yt70:P47lc8eaHH+cHilR8KK0qdo9DFOnOMc/spPBzZd6ITecyA==
+  aks-otel-demo:dnsZoneResourceGroup:
+    secure: v1:t+Gg6Mfjb7VKl9gc:+l+WnZFHUFuN4dWFK943EFt1dwq1U+I7qg==
   aks-otel-demo:honeycombKey: Ru255IJbfspxl2Gmj63MTF
   azure-native:location: uksouth
