--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,7 @@ jobs:
           upsert: true
           config-map: |
             dns-zone-id: { value: ${{ secrets.DNS_ZONE_ID }} }
+            honeycombKey: { value: ${{ secrets.HONEYCOMB_API_KEY }} }
         env:
           ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
           ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
