--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   deploy:
-    name: deploy
+    name: Pulumi Deploy
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -50,6 +50,3 @@ jobs:
           PULUMI_CONFIG_PASSPHRASE: ${{ secrets.PULUMI_PASSPHRASE }}
           AZURE_STORAGE_ACCOUNT: ${{ env.PULUMI_STORAGE_ACCOUNT }}
           AZURE_KEYVAULT_AUTH_VIA_CLI: true
-
-      - name: Adding markdown
-        run: echo '${{ toJson(steps.pulumi_deploy) }} 🚀' >> $GITHUB_STEP_SUMMARY
