Disable vscode yaml schema validation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "dotnet.defaultSolution": "aks-otel-demo.sln"
+    "dotnet.defaultSolution": "aks-otel-demo.sln",
+    "yaml.schemaStore.enable": false
 }
