--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "opentelemetry-helm-charts"]
 	path = opentelemetry-helm-charts
 	url = https://github.com/martinjt/opentelemetry-helm-charts
+	branch = add-replicas
