--- a/infra/config-files/collector/values.yaml
+++ b/infra/config-files/collector/values.yaml
@@ -1,25 +1,53 @@
-default:
-  replicas: 2
+mode: daemonset
+nameOverride: collector
+resources:
+  limits:
+    cpu: 1
+    memory: 1Gi
+presets:
+  hostMetrics:
+    enabled: true
+  kubernetesAttributes:
+    enabled: true
+service:
+  type: ClusterIP
+  enabled: true
+image:
+  tag: "0.81.0"
+config:
+  receivers:
+    otlp:
+      protocols:
+        grpc:
+        http:
+          cors:
+            allowed_origins:
+              - http://*
+              - https://*
+          endpoint: 0.0.0.0:4318
+  processors:
+    transform:
+      metric_statements:
+        - context: metric
+          statements:
+            - set(description, "Measures the duration of inbound HTTP requests") where name == "http.server.duration"
+    filter/ottl:
+      error_mode: ignore
+      metrics:
+        metric:
+          - 'name == "queueSize"'
 
-opentelemetry-collector:
-  presets:
-    kubernetesAttributes:
-      enabled: true
-  image:
-    tag: "0.81.0"
-  config:
-    receivers:
-      otlp:
-        protocols:
-          grpc:
-          http:
-            cors:
-              allowed_origins:
-                - http://*
-                - https://*
-            endpoint: 0.0.0.0:4318
-    service:
-      pipelines:
-        traces:
-          processors: [memory_limiter, batch]
-          exporters: [otlp, logging, otlp/honeycomb, spanmetrics]
+  exporters:
+    otlp/refinery:
+      endpoint: ${REFINERY_ADDRESS}:4317
+      headers:
+        x-honeycomb-team: ${HONEYCOMB_API_KEY}
+      tls:
+        insecure: true
+
+  service:
+    pipelines:
+      traces:
+        receivers: [otlp]
+        processors: [memory_limiter, batch]
+        exporters: [otlp/refinery, logging]
