--- a/infra/config-files/collector/values-daemonset.yaml
+++ b/infra/config-files/collector/values-daemonset.yaml
@@ -7,8 +7,6 @@ resources:
 presets:
   kubeletMetrics:
     enabled: true
-  hostMetrics:
-    enabled: true
   kubernetesAttributes:
     enabled: true
 image:
@@ -16,10 +14,11 @@ image:
 config:
   receivers:
     prometheus: null
-    kubeletstats:
-      metric_groups:
-        - node
-        - pod
+    # kubeletstats:
+    #   metric_groups:
+    #     - container
+    #     - node
+    #     - pod
     otlp:
       protocols:
         grpc:
@@ -30,29 +29,6 @@ config:
               - https://*
           endpoint: 0.0.0.0:4318
   processors:
-    k8sattributes/kubeletstats:
-      extract:
-        metadata:
-        - k8s.namespace.name
-        - k8s.deployment.name
-        - k8s.statefulset.name
-        - k8s.daemonset.name
-        - k8s.cronjob.name
-        - k8s.job.name
-        - k8s.node.name
-        - k8s.pod.name
-        - k8s.pod.uid
-        - k8s.pod.start_time
-      passthrough: false 
-      filter:  
-        node_from_env_var: K8S_NODE_NAME
-      pod_association:
-        - sources:
-          - from: resource_attribute
-            name: k8s.pod.name
-          - from: resource_attribute
-            name: k8s.namespace.name
-
     filter/ignore_queue_size:
       error_mode: ignore
       metrics:
@@ -62,7 +38,7 @@ config:
       transforms:
         - include: k8s.pod.network.io
           match_type: strict
-          experimental_match_labels: 
+          experimental_match_labels:
             direction: receive
           action: insert
           new_name: k8s.pod.network.io.receive_bytes
@@ -72,7 +48,7 @@ config:
               aggregation_type: sum
         - include: k8s.pod.network.io
           match_type: strict
-          experimental_match_labels: 
+          experimental_match_labels:
             direction: transmit
           action: insert
           new_name: k8s.pod.network.io.transmit_bytes
@@ -84,7 +60,7 @@ config:
       transforms:
         - include: k8s.node.network.io
           match_type: strict
-          experimental_match_labels: 
+          experimental_match_labels:
             direction: receive
           action: insert
           new_name: k8s.node.network.io.receive_bytes
@@ -94,7 +70,7 @@ config:
               aggregation_type: sum
         - include: k8s.node.network.io
           match_type: strict
-          experimental_match_labels: 
+          experimental_match_labels:
             direction: transmit
           action: insert
           new_name: k8s.node.network.io.transmit_bytes
@@ -112,7 +88,7 @@ config:
         - 'name == "k8s.pod.network.errors"'
         - 'name == "k8s.node.network.errors"'
   exporters:
-    otlp:
+    otlp/refinery:
       endpoint: ${REFINERY_ADDRESS}:4317
       headers:
         x-honeycomb-team: ${HONEYCOMB_API_KEY}
@@ -138,10 +114,11 @@ config:
 
   service:
     pipelines:
-      metrics/kubeletstats:
-        receivers: [kubeletstats]
-        processors: 
-          - k8sattributes/kubeletstats
+      metrics/new:
+        receivers:
+          - kubeletstats
+        processors:
+          - k8sattributes
           - metricstransform/podnetwork_aggregation
           - metricstransform/nodenetwork_aggregation
           - filter/networkmetrics
@@ -156,11 +133,9 @@ config:
         receivers:
         - otlp
         - prometheus
-        - hostmetrics
-      metrics: null
-      logs: 
+      logs:
         exporters: [otlp/logging]
       traces:
-        exporters: [otlp]
+        exporters: [otlp/refinery]
     telemetry:
       metrics: null
