--- a/infra/config-files/collector/values-daemonset.yaml
+++ b/infra/config-files/collector/values-daemonset.yaml
@@ -5,20 +5,14 @@ resources:
     cpu: 1
     memory: 1Gi
 presets:
-  kubeletMetrics:
-    enabled: true
+  # kubeletMetrics:
+  #   enabled: true
   kubernetesAttributes:
     enabled: true
 image:
   tag: "0.81.0"
 config:
   receivers:
-    prometheus: null
-    # kubeletstats:
-    #   metric_groups:
-    #     - container
-    #     - node
-    #     - pod
     otlp:
       protocols:
         grpc:
@@ -29,64 +23,6 @@ config:
               - https://*
           endpoint: 0.0.0.0:4318
   processors:
-    filter/ignore_queue_size:
-      error_mode: ignore
-      metrics:
-        metric:
-          - 'name == "queueSize"'
-    metricstransform/podnetwork_aggregation:
-      transforms:
-        - include: k8s.pod.network.io
-          match_type: strict
-          experimental_match_labels:
-            direction: receive
-          action: insert
-          new_name: k8s.pod.network.io.receive_bytes
-          operations:
-            - action: aggregate_labels
-              label_set: [k8s.namespace, k8s.pod.name, k8s.pod.uid, k8s.node.name]
-              aggregation_type: sum
-        - include: k8s.pod.network.io
-          match_type: strict
-          experimental_match_labels:
-            direction: transmit
-          action: insert
-          new_name: k8s.pod.network.io.transmit_bytes
-          operations:
-            - action: aggregate_labels
-              label_set: [k8s.namespace, k8s.pod.name, k8s.pod.uid, k8s.node.name]
-              aggregation_type: sum
-    metricstransform/nodenetwork_aggregation:
-      transforms:
-        - include: k8s.node.network.io
-          match_type: strict
-          experimental_match_labels:
-            direction: receive
-          action: insert
-          new_name: k8s.node.network.io.receive_bytes
-          operations:
-            - action: aggregate_labels
-              label_set: [k8s.node.name]
-              aggregation_type: sum
-        - include: k8s.node.network.io
-          match_type: strict
-          experimental_match_labels:
-            direction: transmit
-          action: insert
-          new_name: k8s.node.network.io.transmit_bytes
-          operations:
-            - action: aggregate_labels
-              label_set: [k8s.node.name]
-              aggregation_type: sum
-
-    filter/networkmetrics:
-      error_mode: ignore
-      metrics:
-        metric:
-        - 'name == "k8s.pod.network.io"'
-        - 'name == "k8s.node.network.io"'
-        - 'name == "k8s.pod.network.errors"'
-        - 'name == "k8s.node.network.errors"'
   exporters:
     otlp/refinery:
       endpoint: ${REFINERY_ADDRESS}:4317
@@ -100,11 +36,11 @@ config:
       headers:
         x-honeycomb-team: ${HONEYCOMB_API_KEY}
         x-honeycomb-dataset: service-metrics
-    otlp/kubelet_metrics:
-      endpoint: api.honeycomb.io:443
-      headers:
-        x-honeycomb-team: ${HONEYCOMB_API_KEY}
-        x-honeycomb-dataset: "kubelet-metrics"
+    # otlp/kubelet_metrics:
+    #   endpoint: api.honeycomb.io:443
+    #   headers:
+    #     x-honeycomb-team: ${HONEYCOMB_API_KEY}
+    #     x-honeycomb-dataset: "kubelet-metrics"
 
     otlp/logging:
       endpoint: api.honeycomb.io:443
@@ -114,27 +50,8 @@ config:
 
   service:
     pipelines:
-      metrics/new:
-        receivers:
-          - kubeletstats
-        processors:
-          - k8sattributes
-          - memory_limiter
-          - batch
-    #      - metricstransform/podnetwork_aggregation
-    #      - metricstransform/nodenetwork_aggregation
-    #      - filter/networkmetrics
-        exporters: [otlp/kubelet_metrics]
-      metrics/default:
-        exporters:
-        - otlp/metrics
-        processors:
-        - k8sattributes
-        - memory_limiter
-        - batch
-        receivers:
-        - otlp
-        - prometheus
+      metrics: 
+        exporters: [otlp/metrics]
       logs:
         exporters: [otlp/logging]
       traces:
