--- a/infra/config-files/collector/values-deployment.yaml
+++ b/infra/config-files/collector/values-deployment.yaml
@@ -5,6 +5,8 @@ resources:
     cpu: 1
     memory: 1Gi
 presets:
+  clusterMetrics:
+    enabled: true
   kubernetesEvents:
     enabled: true
 image:
@@ -12,18 +14,46 @@ image:
 config:
   receivers:
     prometheus: null
+  processors:
+    transform/events:
+      error_mode: ignore
+      log_statements:
+        - context: log
+          statements:
+            - set(attributes["watch-type"], body["type"]) where IsMap(body) and body["type"] != nil
+
+            - merge_maps(attributes, body, "upsert") where IsMap(body) and body["object"] == nil
+            - merge_maps(attributes, body["object"], "upsert") where IsMap(body) and body["object"] != nil
+
+            - merge_maps(attributes, attributes[ "metadata"], "upsert") where IsMap(attributes[ "metadata"])
+            - set(attributes["k8s.pod.name"], attributes["regarding"]["name"]) where attributes["regarding"]["kind"] == "Pod"
+            - set(attributes["k8s.node.name"], attributes["regarding"]["name"]) where attributes["regarding"]["kind"] == "Node"
+            - set(attributes["k8s.job.name"], attributes["regarding"]["name"]) where attributes["regarding"]["kind"] == "Job"
+            - set(attributes["k8s.cronjob.name"], attributes["regarding"]["name"]) where attributes["regarding"]["kind"] == "CronJob"
+            - set(attributes["k8s.namespace.name"], attributes["regarding"]["namespace"]) where attributes["regarding"]["kind"] == "Pod" or attributes["regarding"]["kind"] == "Job" or attributes["regarding"]["kind"] == "CronJob"
+
+            - set(severity_text, attributes["type"]) where attributes["type"] == "Normal" or attributes["type"] == "Warning"
+            - set(severity_number, SEVERITY_NUMBER_INFO) where attributes["type"] == "Normal"
+            - set(severity_number, SEVERITY_NUMBER_WARN) where attributes["type"] == "Warning"
   exporters:
     otlp/logging:
       endpoint: api.honeycomb.io:443
       headers:
-        x-honeycomb-team: ${HONEYCOMB_API_KEY}
+        x-honeycomb-team: ${env:HONEYCOMB_API_KEY}
         x-honeycomb-dataset: "k8s-events"
+    otlp/k8s-metrics:
+      endpoint: "api.honeycomb.io:443"
+      headers:
+        "x-honeycomb-team": "${env:HONEYCOMB_API_KEY}"
+        "x-honeycomb-dataset": "k8s-metrics"
 
   service:
     pipelines:
       traces: null
-      metrics: null
+      metrics:
+        exporters: [ otlp/k8s-metrics ]
       logs:
+        processors: [ memory_limiter, transform/events, batch ]
         exporters: [otlp/logging]
     telemetry:
       logs:
