Updates for the EU

--- a/infra/config-files/collector/values-deployment.yaml
+++ b/infra/config-files/collector/values-deployment.yaml
@@ -12,8 +12,6 @@ presets:
 image:
   tag: "0.86.0"
 config:
-  receivers:
-    zipkin: null
   processors:
     transform/events:
       error_mode: ignore
@@ -50,17 +48,16 @@ config:
     otlp/logging-eu:
       endpoint: api.eu1.honeycomb.io:443
       headers:
-        x-honeycomb-team: ${env:HONEYCOMB_API_KEY}
+        x-honeycomb-team: ${env:HONEYCOMB_API_KEY_EU}
         x-honeycomb-dataset: "k8s-events"
     otlp/k8s-metrics-eu:
       endpoint: "api.eu1.honeycomb.io:443"
       headers:
-        "x-honeycomb-team": "${env:HONEYCOMB_API_KEY}"
+        "x-honeycomb-team": "${env:HONEYCOMB_API_KEY_EU}"
         "x-honeycomb-dataset": "k8s-metrics"
 
   service:
     pipelines:
-#      traces: null
       metrics:
         exporters: [ otlp/k8s-metrics, otlp/k8s-metrics-eu ]
       logs:
