--- a/infra/aks-otel-demo.csproj
+++ b/infra/aks-otel-demo.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Core" Version="1.31.0" />
-    <PackageReference Include="Pulumi" Version="3.*" />
+    <PackageReference Include="Pulumi" Version="3.57.0" />
     <PackageReference Include="Pulumi.AzureAD" Version="5.37.0" />
     <PackageReference Include="Pulumi.AzureNative" Version="2.0.0" />
     <PackageReference Include="Pulumi.Kubernetes" Version="4.4.0" />
