Moved telemetry to use a Service instead of NODE_IP

--- a/infra/config-files/collector/values-daemonset.yaml
+++ b/infra/config-files/collector/values-daemonset.yaml
@@ -9,6 +9,10 @@ presets:
     extractAllPodAnnotations: true
 image:
   repository: "ghcr.io/open-telemetry/opentelemetry-collector-releases/opentelemetry-collector-contrib"
+
+service:
+  enabled: true
+
 config:
   receivers:
     jaeger: null
