--- a/infra/config-files/demo/values.yaml
+++ b/infra/config-files/demo/values.yaml
@@ -1,9 +1,7 @@
 default:
   envOverrides:
     - name: "OTEL_COLLECTOR_NAME"
-      valueFrom:
-        fieldRef:
-          fieldPath: status.hostIP
+      value: "otel-collector.otel-collector"
 
 components:
   accountingService:
